# llmkit

./: .editorconfig  .env.sample  .gitignore  README.md  pyproject.toml
examples/: main.py  models.py  transfomers.py
llmkit/: __init__.py  config.py  main.py
llmkit/models/: __init__.py  generics.py  prompt.py
llmkit/services/: __init__.py  exceptions.py  inference.py  model.py
llmkit/transformers/: __init__.py  base.py  default.py
