[tool.poetry]
name = "llm-stack-kit"
version = "0.1.3"
description = "Generate Data from LLM easily using LLMKit"
authors = ["Tosin Amuda <tosinamuda@gmail.com>"]
readme = "README.md"
packages = [{include = "llmkit"}]
repository = "https://github.com/useentropy/llmkit"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
openai = "^0.28.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
flake8 = "^6.1.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
